# multiagent-leaderboard-test

./: README.md  generate_compose.py  scenario-template.toml  scenario.toml
.github/app/: Dockerfile  Makefile  config.py  db.py  github_client.py  main.py  models.py  pyproject.toml  webhooks.py
.github/app/handlers/: __init__.py  installation.py  workflow_run.py
.github/app/migrations/: 001_initial.sql
.github/workflows/: run-scenario.yml  runner.yml
examples/: purple-agent-workflow.yml  scenario.toml
submissions/Andrew7234/2025-12-04-18-4/: manifest.json  results.json  scenario.toml
submissions/Andrew7234/20251126-072221/: results.json
